[metadata]
name = upscale_cli
description = tui application to create concat commands for ffmpeg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://upscale_cli.org
author = upscale_cli team
author_email = bossjones@theblacktonystark.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities
download_url = https://github.com/upscale_cli/upscale_cli

[options]
python_requires = >=3.9

[build_docs]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html

[bumpversion]
current_version = 0.1.0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<stage>[^.]*)\.(?P<devnum>\d+))?
serialize =
    {major}.{minor}.{patch}-{stage}.{devnum}
    {major}.{minor}.{patch}

[bumpversion:part:stage]
optional_value = stable
first_value = stable
values =
    alpha
    beta
    stable

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:upscale_cli/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
ignore =
    E741
    F812
    H101
    H202
    H233
    H301
    H306
    H401
    H403
    H404
    H405
    H501
    F401
    W604
    F811
    F841
    E302
    E401
    E501
    E265
    E713
    E402
    D204
    D102
    D400
    D205
    D202
    D103
    D209
    D105
    D101
    D401
    D200
    E127
    D100
    E241
    E704
    E251
    W503
    W504
    E722
    W605
    W1203
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .svn,
    CVS,
    .bzr,
    .hg,
    .tox,
    docs,
    virtualenv_run,
    tests/*.,
    upscale_cli_venv*,
    upscale_cli_venv*/*
    .venv,
    www_static,
    venv,
    bin,
    lib,
    deps,
    tests/fixtures/simple/packs/linux/actions/checks,
    .eggs,
    stubs/*
max-line-length = 200
max-complexity = 12

[pycodestyle]
ignore = E741,F812,H101,H202,H233,H301,H306,H401,H403,H404,H405,H501,F401,W604,F811,F841,E302,E401,E501,E265,E713,E402,D204,D102,D400,D205,D202,D103,D209,D105,D101,D401,D200,E127,D100,E241,E704,E251,W503,W504,E722,W605,W505
max_line_length = 200
max_doc_length = 72

[tool:pytest]
filterwarnings = error
env =
    SECRET_KEY=secret
timeout = 60
testpaths = tests
norecursedirs =
    .git
    testing_config
    dist
    build
    .tox
    tests/fixtures/simple/packs/linux/actions/checks
markers =
    run_loop: Mark coroutine to be run with asyncio loop.
    redis_version(*version, reason): Mark test expecting minimum Redis version
    skip(reason): Skip test
    mypy: marks tests dealing with mypy (deselect with '-m "not mypy"')
    usersonly: marks tests dealing with users (deselect with '-m "not usersonly"')
    loginonly: marks tests dealing with login (deselect with '-m "not loginonly"')
    actiononly: marks tests dealing with action (deselect with '-m "not actiononly"')
    unittest: marks tests dealing with unittest (deselect with '-m "not unittest"')
    integration: marks tests dealing with integration testing (deselect with '-m "not integration"')
    packsonly: marks tests dealing with packs (deselect with '-m "not packsonly"')
    sensorsonly: marks tests dealing with sensors (deselect with '-m "not sensorsonly"')
    triggeronly: marks tests dealing with trigger (deselect with '-m "not triggeronly"')
    youtubeonly: marks tests dealing with youtube (deselect with '-m "not youtubeonly"')
    csvonly: marks tests dealing with csv (deselect with '-m "not csvonly"')
    fulltextsearchonly: marks tests dealing with full text search (deselect with '-m "not fulltextsearchonly"')
    triggerinstanceonly: marks tests dealing with triggerinstance (deselect with '-m "not triggerinstanceonly"')
    triggertypeonly: marks tests dealing with triggertype (deselect with '-m "not triggertypeonly"')
    configonly: marks tests dealing with configs (deselect with '-m "not configonly"')
    txtonly: marks tests dealing with txt (deselect with '-m "not txtonly"')
    smartonly: marks tests dealing with smart configs (deselect with '-m "not smartonly"')
    baseconfigonly: marks tests dealing with baseconfigs (deselect with '-m "not baseconfigonly"')
    settingsonly: marks tests dealing with settings (deselect with '-m "not settingsonly"')
    workspaceonly: marks tests dealing with workspace (deselect with '-m "not workspaceonly"')
    clientonly: marks tests dealing with client (deselect with '-m "not clientonly"')
    dbonly: marks tests dealing with db (deselect with '-m "not dbonly"')
    pathsonly: marks tests dealing with paths module (deselect with '-m "not pathsonly"')
    fastapionly: marks tests dealing with fastapi (deselect with '-m "not fastapionly"')
    constantsonly: marks tests dealing with constants (deselect with '-m "not constantsonly"')
    jwtonly: marks tests dealing with jwt (deselect with '-m "not jwtonly"')
    jsononly: marks tests dealing with json (deselect with '-m "not jsononly"')
    utilsonly: marks tests dealing with utils (deselect with '-m "not utilsonly"')
    clionly: marks tests dealing with cli (deselect with '-m "not clionly"')
    itemonly: marks tests dealing with items (deselect with '-m "not itemonly"')
    loggeronly: marks tests dealing with loggers (deselect with '-m "not loggeronly"')
    datainconsistent: marks tests dealing with inconsistencies between the apis data and the db itself via the crud functions (deselect with '-m "not datainconsistent"')
    needsisolatedfilesystem: marks tests dealing that need to be using an isolated filesystem (deselect with '-m "not needsisolatedfilesystem"')
    mockedfs: marks tests dealing that need to be using an isolated filesystem (deselect with '-m "not mockedfs"')
    convertingtotestclientstarlette: marks tests that are in the process of being converted to use TestClient (deselect with '-m "not convertingtotestclientstarlette"')
addopts = --cov-append --cov=upscale_cli --cov-report term-missing --cov-report xml:cov.xml --cov-report html:htmlcov --cov-report annotate:cov_annotate --mypy --showlocals --tb=short
mock_use_standalone_module = False

[isort]
multi_line_output = 3
indent = "    "
force_sort_within_sections = true
known_inbetweens = typing
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 88
default_section = THIRDPARTY
known_first_party = upscale_cli,tests
forced_separate = tests

[yapf]
based_on_style = google

[aliases]
test = pytest
dists = sdist bdist_wheel

[test]
addopts = --verbose
extras = True

[coverage:run]
source = upscale_cli
omit =
    upscale_cli/pkg/*
    upscale_cli/docs/*
    upscale_cli/tests/*
    /etc/python3.6/sitecustomize.py
    venv/**
    upscale_cli/tests/**
    .eggs/**
    /home/travis/virtualenv/**
    tests/fixtures/simple/packs/linux/actions/checks/**

[coverage:report]
exclude_lines =
    pragma: no cover

    def __repr__
    if self\.debug

    raise AssertionError
    raise NotImplementedError

    if 0:
    if __name__ == .__main__.:

[coverage:paths]
source =
    upscale_cli/
    /home/developer/app/upscale_cli

[devpi:upload]
no-vcs = 1
formats =
    sdist
    bdist_wheel

[mypy]
plugins = pydantic.mypy
strict_optional = True
warn_redundant_casts = True
disallow_any_generics = True
check_untyped_defs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[mypy-loguru]
ignore_missing_imports = True

[mypy-asyncpg.*]
ignore_missing_imports = True

[mypy-bcrypt]
ignore_missing_imports = True

[mypy-passlib.*]
ignore_missing_imports = True

[mypy-slugify.*]
ignore_missing_imports = True

[mypy-pypika.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-alembic.*]
ignore_missing_imports = True

[mypy-docker.*]
ignore_missing_imports = True

[mypy-httpx.*]
disallow_untyped_defs = True
ignore_missing_imports = True

[mypy-tests.conftest]
ignore_missing_imports = True
ignore_errors = True

[mypy-tests.testing_helpers]
ignore_missing_imports = True
ignore_errors = True

[freezegun.*]
ignore_missing_imports = True
ignore_errors = True

[mypy-tests.test_api.test_routes.test_articles]
ignore_missing_imports = True
ignore_errors = True

[mypy-psycopg2.*]
ignore_missing_imports = True
